RESULTS/AutoSpec/raw_results/out-4o-NLA_lipus/19_0007/19_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/19_0007/19_merged.c:14:63: error: unterminated comment
   14 |     loop invariant x == \sum_{i=1}^{c} i^5; /* Sum of fifth powers from 1 to c */;
      |                                                               ^
